--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "myApi",
+    "name": "myapi",
     "builds": [
         {   "src": "app.js","use": "@vercel/node"   }
     ],
